--- a/src/Components/PageComponents/AboutComponents/AboutContents.module.css
+++ b/src/Components/PageComponents/AboutComponents/AboutContents.module.css
@@ -5,7 +5,7 @@
 
 .topContainer{
     width: 100%;
-    background-image: url('https://blog.bhlankatours.com/wp-content/uploads/2022/04/Cycling-in-Ella.jpg');
+    background-image: url('https://visitsrilankatours.com/images/slider/banner-9.jpg');
     background-size: 100% 17rem;
     background-repeat: no-repeat;
     height: 17rem;
