--- a/src/Components/PageComponents/AboutComponents/AboutContents.module.css
+++ b/src/Components/PageComponents/AboutComponents/AboutContents.module.css
@@ -5,20 +5,22 @@
 
 .topContainer{
     width: 100%;
-    background-image: url('https://visitsrilankatours.com/images/slider/banner-9.jpg');
-    background-size: 100% 17rem;
+    background-image: url('https://withlocals-com-res.cloudinary.com/image/upload/w_360,h_203,c_fill,g_auto,q_auto,dpr_3.0,f_auto/f6c0093c19d89c8dadb1e4148683874d');
+    background-size: 100% 18.5rem;
     background-repeat: no-repeat;
-    height: 17rem;
+    height: 18.5rem;
     object-fit: cover;
 }
 
 .topContainer span{
     position: absolute;
     left: 10rem;
-    top: 13rem;
+    top: 15rem;
     color: white;
     font-size: 60px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
 }
 
 .aboutMeContainer{
@@ -61,7 +63,12 @@
     grid-area: content;
     padding: 10px 15px 10px 50px;
     font-family: "Roboto Condensed";
-    font-size: 16px;
+    font-size: 18px;
+    margin-top: 2rem;
+}
+
+.additionPara{
+    margin-top: 1rem;
 }
 
 .paragraph2{
