--- a/src/Components/PageComponents/TourGuideComponents/List.css
+++ b/src/Components/PageComponents/TourGuideComponents/List.css
@@ -19,6 +19,7 @@
     background-repeat: no-repeat;
     height: 20rem;
     object-fit: cover;
+    margin-bottom: 3rem;
 }
 
 .headingImgContainer span{
@@ -28,6 +29,31 @@
     color: white;
     font-size: 60px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.guideCaption{
+    width: 80%;
+    margin: 1rem auto;
+    font-family: 'Roboto';
+}
+
+.rates{
+    margin: 2rem auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    text-align: center;
+    align-items: center;
+}
+
+.rates>span:nth-of-type(1){
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.rates>span:nth-of-type(2){
+    border: 1px solid blue;
+    padding: 5px 15px;
 }
 
 .listContainer{
