--- a/src/Components/PageComponents/Homepage/TopGuides.css
+++ b/src/Components/PageComponents/Homepage/TopGuides.css
@@ -33,8 +33,8 @@
 
 .featuredImg{
     background-repeat: no-repeat;
-    height: 28rem;
-    width: 28rem;
+    height: 300px;
+    width: 300px;
     display: block;
     object-fit: cover;
 }
@@ -44,4 +44,23 @@
     bottom: 20px;
     left: 20px;
     color: black;
+    display: flex;
+    align-items: center;
+    font-family: 'Cabin';
+}
+
+.featuredTitles>h2{
+    background-color: black;
+    padding: 5px 10px;
+    font-size: 16px;
+    color: white;
+    border-radius: 6px 0 0 6px;
+}
+
+.featuredTitles>h5{
+    background-color: white ;
+    padding: 5px 10px;
+    font-size: 14px;
+    color: black;
+    border-radius: 0px 6px 6px 0;
 }
