adding new changes

--- a/src/Components/PageComponents/TourGuideComponents/AllGuides.module.css
+++ b/src/Components/PageComponents/TourGuideComponents/AllGuides.module.css
@@ -78,7 +78,7 @@
     align-items: center;
     text-align: center;
     justify-content: center;
-    padding: 3px;
+    padding: 5px 10px;
     border-radius: 5px;
 }
 
