--- a/src/Components/PageComponents/ProfileComponents/AddGallery.css
+++ b/src/Components/PageComponents/ProfileComponents/AddGallery.css
@@ -3,6 +3,23 @@
     width: 83%;
 }
 
+.galleryText{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.galleryText>h3{
+    color: #23103E;
+}
+
+.galleryText>h5{
+    color: #65626C ;
+}
+
 .addToGalleryForm{
     display: flex;
     flex-direction: column;
@@ -54,6 +71,9 @@
     background-color: var(--inputColor);
     padding: 10px 15px;
     border-radius: 8px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .mantine-1ajyf09{
