--- a/src/Components/PageComponents/Tours gallery/ToursGalleryContents.css
+++ b/src/Components/PageComponents/Tours gallery/ToursGalleryContents.css
@@ -83,7 +83,7 @@
     align-items: center;
     text-align: center;
     justify-content: center;
-    padding: 2px;
+    padding: 8px;
     background-color: black;
     color: white;
 }
@@ -118,6 +118,7 @@
     text-align: center;
     align-items: center;
     justify-content: center;
+    margin-bottom: 5px;
 }
 
 .gdId>span:nth-of-type(2){
