--- a/src/Components/PageComponents/TourGuideComponents/AllGuides.module.css
+++ b/src/Components/PageComponents/TourGuideComponents/AllGuides.module.css
@@ -3,7 +3,8 @@
     padding: 10px;
     margin: 10px;
     border-radius: 6px;
-    display: flex;
+    display: grid;
+    grid-template-columns: 20rem 20rem 13rem;
     justify-content: space-between;
     gap: 30px;
     margin-bottom: 10px;
@@ -14,8 +15,8 @@
 
 .guideImg{
     flex: 1;
-    width: 250px;
-    height: 250px;
+    width: 320px;
+    height: 320px;
     object-fit: cover;
     margin-right: 1rem;
 }
@@ -46,13 +47,16 @@
 .topDetails>span:nth-of-type(2){
     font-weight: 600;
     color: var(--black);
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .details{
     display: grid;
     grid-template-columns: 7rem auto;
-    gap: 10px;
+    gap: 15px;
+    font-size: 15px;
+    margin-bottom: 5px;
+    padding-right: 10px;
 }
 
 .details>span:nth-of-type(1){
@@ -64,15 +68,31 @@
     flex-direction: column;
     justify-content: space-between;
     font-weight: bold;
+    align-items: flex-end;
+    margin: 10px;
 } 
+
+.availability{
+    color: #061084  ;
+    font-weight: bold;
+    font-size: 20px;
+    margin-right: 20px;
+}
+
+.unavailability{
+    color: #EC0020 ;
+    font-weight: bold;
+    font-size: 20px;
+    margin: 20px;
+}
 
 .ratingBar{
     display: grid;
-    grid-template-columns: 5rem auto;
+    grid-template-columns: 5rem 7rem;
     gap: 20px;
 }
 
-.ratingBar>span:nth-of-type(2){
+/* .ratingBar>span:nth-of-type(2){
     background-color: #000080;
     color: white;
     align-items: center;
@@ -80,6 +100,19 @@
     justify-content: center;
     padding: 5px 10px;
     border-radius: 5px;
+    font-weight: 300;
+} */
+
+.ratingNum{
+    background-color: #000080;
+    color: white;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-weight: 200;
+    min-width: 1px;
 }
 
 .subDetails{
