--- a/src/Components/PageComponents/TourGuideComponents/AllGuides.module.css
+++ b/src/Components/PageComponents/TourGuideComponents/AllGuides.module.css
@@ -46,7 +46,7 @@
 
 .topDetails>span:nth-of-type(2){
     font-weight: 600;
-    color: var(--black);
+    color: #0E6687 ;
     font-size: 16px;
 }
 
