--- a/src/Components/PageComponents/Tours gallery/ToursGalleryContents.css
+++ b/src/Components/PageComponents/Tours gallery/ToursGalleryContents.css
@@ -1,10 +1,11 @@
 .topContainer{
     width: 100%;
     background-image: url('http://www.srilanka-travel-tours.com/images/sri-lanka.jpg');
-    background-size: 100% 17rem;
+    background-size: 100% 20rem;
     background-repeat: no-repeat;
-    height: 17rem;
-    object-fit: cover;
+    background-position: center;
+    height: 20rem;
+    object-fit: contain;
 }
 
 .topContainer span{
@@ -14,6 +15,8 @@
     color: white;
     font-size: 60px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: black;
 }
 
 .galleryComponents{
