--- a/src/Components/Modals/ProfileUpdateModal.css
+++ b/src/Components/Modals/ProfileUpdateModal.css
@@ -27,9 +27,10 @@
     background-color: var(--inputColor)!important;
 }
 
-.infoForm button{
-    width: 6rem;
-    height: 2rem;
+.buttons{
+    min-width: 6rem;
+    height: 2.2rem;
+    padding: 5px 15px;
     align-self: flex-end;
     display: flex;
     align-items: center;
@@ -39,4 +40,23 @@
     border-radius: 0.5rem;
     background: var(--buttonBg);
     transition: all 100ms ease-out;
+}
+
+.authProfiles{
+    display: flex;
+    gap: 1rem;
+    width: 100%;
+    align-items: center;
+    background-color: var(--inputColor);
+    padding: 10px 5px;
+    border-radius: 8px;
+    text-align: center;
+    justify-content: center;
+}
+
+.mantine-qew57g{
+    background-color: var(--inputColor) !important;
+    border: none!important;
+    outline: none!important;
+    font-size:17px!important;
 }
