--- a/src/Components/PageComponents/ProfileComponents/ProfileView.module.css
+++ b/src/Components/PageComponents/ProfileComponents/ProfileView.module.css
@@ -72,10 +72,11 @@
 }
 
 .updateBtn{
-    background-color: orange;
+    background: var(--buttonBg);
+    color: white;
     padding: 7px;
     border-radius: 8px;
     border: none;
-    width: 12rem;
-    margin: 1.2rem auto;
+    width: 10rem;
+    margin: 1.2rem auto;margin-top: 2rem;
 }
