--- a/src/Components/PageComponents/TourGuideComponents/List.css
+++ b/src/Components/PageComponents/TourGuideComponents/List.css
@@ -99,15 +99,14 @@
     border: none;
     border-radius: 0.5rem;
     background: var(--buttonBg);
-    transition: all 100ms ease-out;
+    transition: 0.5s;
     padding: 5px 10px;
 }
 
 .srchBtn:hover{
     cursor: pointer;
-    color: var(--orange);
-    background: transparent;
-    border: 2px solid var(--orange);
+    color: white;
+    background: linear-gradient(98.63deg, #f7940b 0%, #ec4314 100%);
 }
 
 
